...
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/cardCommentsHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvComments"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:padding="8dp"
            android:clipToPadding="false"
            tools:listitem="@layout/item_comment"/>
    </androidx.cardview.widget.CardView>
...
