...
                android:gravity="center_vertical"
                android:layout_marginStart="3dp"
                android:text="0"
                android:textColor="@color/buttonColor" />

            <Button
                android:id="@+id/btnComment"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="Comments (0)"
                android:textColor="@color/buttonColor" />
...
