...
                            android:layout_weight="1"
                            android:text="All"
                            android:textSize="10sp"
                            android:buttonTint="@drawable/checkbox_tint"/>

                        <CheckBox
                            android:id="@+id/checkboxHappy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/happy"
                            android:textSize="10sp"
                            android:buttonTint="@drawable/checkbox_tint"/>
...
                    android:layout_height="wrap_content"
                    android:text="Filter reason: (max 200 chars)"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/reasonDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="Please enter your text input here..."
                    android:maxLength="200"
                    android:minHeight="48dp" />
...
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterEmotional">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonApplyFilter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:text="Apply Filters"
...
