...
        app:layout_constraintTop_toBottomOf="@id/moodEventsCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/demo_login_button"
            android:padding="2dp"
            android:text="Filter"
...
