...

    <CheckBox
        android:id="@+id/cb_moodhistory_happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/primaryColor"
        android:text="Happy" />

    <CheckBox
        android:id="@+id/cb_moodhistory_angry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/primaryColor"
...
